# fastnoise2-rs

./: .gitignore
.github/workflows/: build-wasm.yml
fastnoise2-rs/: Cargo.toml
fastnoise2-rs/examples/: encoded_node_tree.rs  manual.rs  multithreaded.rs  safe.rs  safe_simple_terrain.rs
fastnoise2-rs/examples/wasm_emscripten/: Makefile  index.html
fastnoise2-rs/examples/wasm_emscripten/src/: main.rs
fastnoise2-rs/src/: error.rs  lib.rs  metadata.rs  safe.rs
fastnoise2-rs/src/generator/: basic.rs  blend.rs  cellular.rs  domain_warp.rs  domain_warp_fractal.rs  fractal.rs  mod.rs  modifier.rs  perlin.rs  simplex.rs  value.rs
fastnoise2-sys/: Cargo.toml
fastnoise2-sys/src/: bindings_vendored.rs  lib.rs
