[package]
name = "fastnoise2-sys"
version = "0.1.3"
edition = "2021"
description = "Rust bindings for FastNoise2."
keywords = ["noise", "simd", "procedural", "perlin", "bindings"]
build = "build/main.rs"
repository = "https://github.com/Lemonzyy/fastnoise2-rs"
license = "MIT"

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"

[features]
build-from-source = []
